# Bench

./: .clang-format  .gitignore  CMakeLists.txt  README.md  future.cpp  lock_free_threadpool.cpp  results.txt
.github/: CODEOWNERS
.github/workflows/: format.yml  linux.yml
bench/: CMakeLists.txt  async_mutex.hpp  collatz.hpp  complex.hpp  contention.hpp  creation.hpp  fibonacci.hpp  latch.hpp  reschedule.hpp  thens.hpp
bind/: CMakeLists.txt  all.hpp
bind/arangodb/: library.cpp  library.hpp
bind/cppcoro/: library.cpp  library.hpp
bind/experimental/: CMakeLists.txt  library.cpp  library.hpp
bind/folly/: library.cpp  library.hpp
bind/qt/: library.cpp
bind/std/: CMakeLists.txt  library.hpp
bind/yaclib/: CMakeLists.txt  intrusive_list.hpp  library.cpp  library.hpp
folly/: future.hpp  threadpool.cpp  threadpool.hpp
future/: CMakeLists.txt  future.cpp  future_lite.cpp
future/bench/: CMakeLists.txt  complex.hpp  contention.hpp  creation.hpp  thens.hpp
future/bind/: all.hpp  blob.hpp  heavy.hpp
future/bind/arangodb/: future.cpp  future.hpp
future/bind/boost_thread/: future.cpp  future.hpp
future/bind/experimental/: CMakeLists.txt
future/bind/folly/: future.cpp  future.hpp
future/bind/qt/: future.hpp
future/bind/std/: CMakeLists.txt  future.hpp
future/bind/yaclib/: CMakeLists.txt  future.cpp  future.hpp  intrusive_list.hpp
future/result/: RESULTS.md
future/result/Ryzen_7_3700X/: README.md
future/result/Ryzen_7_3700X/clang_libcxx/: data.json
future/result/Ryzen_7_3700X/clang_libstdcxx/: data.json
future/result/Ryzen_7_3700X/gcc_libstdcxx/: data.json
future/result/Ryzen_9_5900X/: README.md
future/result/Ryzen_9_5900X/clang_libcxx/: data.json
future/result/Ryzen_9_5900X/clang_libstdcxx/: data.json
future/result/Ryzen_9_5900X/gcc_libstdcxx/: data.json
future/result/i5-3210M/clang_libcxx/: data.json
future/result/i5-3210M/clang_libstdcxx/: data.json
future/result/i5-3210M/gcc_libstdcxx/: data.json
future/result/i5-5300U/clang_libcxx/: data.json
future/result/i5-5300U/clang_libstdcxx/: data.json
future/result/i5-5300U/gcc_libstdcxx/: data.json
future/result/i7-11850H/: README.md
future/result/i7-11850H/clang_libcxx/: data.json
future/result/i7-11850H/clang_libstdcxx/: data.json
future/result/i7-11850H/gcc_libstdcxx/: data.json
future/result/i7-12700KF/: README.md
future/result/i7-12700KF/clang_libcxx/: data.json
future/result/i7-12700KF/clang_libstdcxx/: data.json
future/result/i7-12700KF/gcc_libstdcxx/: data.json
script/: build.sh  compare.sh  gen_pictures  run.sh
script/shit/: draw_graphic.ipynb
script/shit/.ipynb_checkpoints/: draw_graphic-checkpoint.ipynb
script/shit/utils/: draw_graphic.ipynb  results.csv
std/: future.hpp  progschj_threadpool.hpp  threadpool.cpp  threadpool.hpp
test/coro/: coro.cpp
test/future/: future.cpp
test/future/result/Ryzen_7_3700X/clang_libcxx/: data.json
test/future/result/Ryzen_7_3700X/gcc_libstdcxx/: data.json
test/future/result/Ryzen_9_5900X/clang_libstdcxx/: data.json
test/future/result/Ryzen_9_5900X/gcc_libstdcxx/: data.json
test/future/result/i5-3210M/clang_libcxx/: data.json
test/future/result/i5-3210M/clang_libstdcxx/: data.json
test/future/result/i5-3210M/gcc_libstdcxx/: data.json
test/future/result/i5-5300U/clang_libstdcxx/: data.json
test/future/result/i5-5300U/gcc_libstdcxx/: data.json
test/future/result/i7-11850H/clang_libstdcxx/: data.json
test/future/result/i7-11850H/gcc_libstdcxx/: data.json
test/future/result/i7-12700KF/: README.md
threadpool_problems/: fluid_solver.cpp  fluid_solver.hpp  simple_fluid_solver.cpp  simple_fluid_solver.hpp
util/: bench.hpp  semaphore.hpp
utils/: threadpool_runner.cpp  threadpool_runner.hpp  threadpool_suite.cpp  threadpool_suite.hpp
yaclib/: future.cpp  future.hpp  threadpool.cpp  threadpool.hpp
