list(APPEND BENCH_HEADERS
  ${CMAKE_CURRENT_SOURCE_DIR}/all.hpp
  )

if (STD)
  add_subdirectory(std)
endif ()
if (YACLIB)
  add_subdirectory(yaclib)
endif ()
if (ARANGODB)
  add_subdirectory(arangodb)
endif ()
if (CPPCORO)
  add_subdirectory(cppcoro)
endif ()
if (FOLLY)
  add_subdirectory(folly)
endif ()
if (BOOST_THREAD)
  add_subdirectory(boost_thread)
endif ()
if (QT)
  add_subdirectory(qt)
endif ()
if (EXPERIMENTAL)
  add_subdirectory(experimental)
endif ()

add_files()
